# pre-commit-yamlpolicy

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg
bannedk8skinds/: bannedk8skinds.py
disallowunquoted/: disallowunquoted.py
valueregex/: valueregex.py
