[metadata]
name = yamlpolicy
version = 1.3.0
description = Allows an organization to specify YAML usage policy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eitrtechnologies/pre-commit-yamlpolicy
author = Nicholas Hughes
author_email = devops@eitr.tech
license = Apache 2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    jmespath>=1.0.0
    ruamel.yaml>=0.16.12
python_requires = >=3.7.1

[options.entry_points]
console_scripts =
    bannedk8skinds = bannedk8skinds.bannedk8skinds:main
    disallowunquoted = disallowunquoted.disallowunquoted:main
    valueregex = valueregex.valueregex:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True
